margin overflow bug fixed

--- a/css/base.css
+++ b/css/base.css
@@ -85,7 +85,6 @@ input[type="email"] {
   outline: none;
   cursor: pointer;
   width: 100%;
-  margin: 0.2rem;
 }
 .start-btn:active {
   transform: scale(0.98);
